--- a/miniprogram/pages/student/orderClass/index.wxss
+++ b/miniprogram/pages/student/orderClass/index.wxss
@@ -10,6 +10,130 @@ page {
 }
 
 .order-container {
-  width: 690rpx;
-  padding: 30px;
+  width: 750rpx;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30rpx;
+}
+.order-container .coach-info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 30rpx;
+  width: 630rpx;
+  /* height: 300rpx; */
+  border-radius: 20rpx;
+  background: linear-gradient(to bottom, #f9eade, #FFFFFF);
+}
+.coach-info .base-info {
+  width: 100%;
+  height: 180rpx;
+  display: flex;
+}
+.coach-info image {
+  width: 180rpx;
+  height: 180rpx;
+  border-radius: 10rpx;
+}
+
+.coach-info .text-info {
+  height: 180rpx;
+  display: flex;
+  flex-direction: column;
+  margin-left: 20rpx;
+}
+
+.coach-info .text-info .name {
+  margin-top: 10rpx;
+  font-size: 34rpx;
+  font-weight: 600;
+  color: #1e1d1d;
+}
+.coach-info .text-info .score {
+  margin-left: 20rpx;
+  font-size: 36rpx;
+  color: #fe9602;
+}
+.coach-info .text-info .text {
+  margin-left: 10rpx;
+  font-size: 26rpx;
+  font-weight: 450;
+}
+.coach-info .text-info .sub {
+  margin-top: 20rpx;
+  display: flex;
+  flex-direction: column;
+  font-size: 26rpx;
+  font-weight: 400;
+  color: #a09f9f;
+}
+.coach-info .coach-dec {
+  width: 570rpx;
+  padding: 30rpx;
+  margin-top: 20rpx;
+  border-radius: 20rpx;
+  background: rgb(246, 246, 246);
+  font-size: 26rpx;
+  color: rgb(96, 96, 96);
+  line-height: 30rpx;
+}
+.coach-school {
+  width: 630rpx;
+  height: 40rpx;
+  margin-top: 30rpx;
+  display: flex;
+  align-items: center;
+  font-size: 26rpx;
+  color: rgb(96, 96, 96);
+  line-height: 30rpx;
+}
+.coach-school image {
+  width: 30rpx;
+  height: 30rpx;
+}
+
+.selectDate-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 30rpx;
+  width: 630rpx;
+  height: 300rpx;
+  border-radius: 20rpx;
+  margin-top: 20rpx;
+  background: #FFFFFF;
+}
+.selectDate-container .title {
+  font-size: 30rpx;
+  color: #1e1d1d;
+  font-weight: 500;
+}
+.selectDate-container .selectDate-options {
+  width: 630rpx;
+  height: 120rpx;
+  margin-top: 30rpx;
+  display: flex;
+  justify-content: space-between;
+}
+.selectDate-container .selectDate-options .option{
+  width: 100rpx;
+  height: 100rpx;
+  padding: 10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  color: #1e1d1d;
+  background-color: #eeeeee;
+}
+.selectDate-container .selectDate-options .option:active{
+  background-color: #a09f9f;
+}
+.selectDate-container .selectDate-options .active{
+  background-color: #fe9602;
+  border: 2rpx solid #fe9602;
 }
