--- a/miniprogram/pages/student/home/index.wxss
+++ b/miniprogram/pages/student/home/index.wxss
@@ -1,6 +1,9 @@
 page {
-  width: 710rpx;
-  margin: 0 20rpx;
+  width: 750rpx;
+  padding-bottom: 50rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: rgb(246, 246, 246);
 }
 
@@ -143,7 +146,7 @@ page {
 }
 
 .coach-list {
-  width: 100%;
+  width: 710rpx;
   padding-bottom: 40rpx;
 }
 
