--- a/miniprogram/pages/student/coachList/index.wxml
+++ b/miniprogram/pages/student/coachList/index.wxml
@@ -1,5 +1,5 @@
 <view class="search-container">
-  <image src="../../../images/icons/search.png" />
+  <image src="{{ images.icons.search }}" />
   <input type="text" value="{{searchQuery}}" confirm-type="search" placeholder="搜索教练姓名" bindconfirm="onConfirm" bindinput="onInput"/>
 </view>
 <scroll-view
@@ -17,7 +17,7 @@
           <view class="coach-title">
             <text>{{item.name}}</text>
             <view class="appointment-container" data-info="{{item}}" bindtap="handleAppointment">
-              <image src="../../../images/student/appointment-icon.png"></image>
+              <image src="{{ images.student.appointment_icon }}"></image>
               <text>预约</text>
             </view>
           </view>
@@ -31,12 +31,12 @@
           <text class="coach-score">{{item.starscore}}</text>
           <text class="dec">服务评价</text>
         </view>
-        <image src="../../../images/student/slash_icon.png" class="star"></image>
+        <image src=" {{ images.student.slash_icon }}" class="star"></image>
         <view class="coach-sub-item">
           <text class="coach-defaul">{{item.studentCount}}</text>
           <text class="dec">服务次数</text>
         </view>
-        <image src="../../../images/student/slash_icon.png" class="star"></image>
+        <image src=" {{ images.student.slash_icon }}" class="star"></image>
         <view class="coach-sub-item">
           <text class="coach-defaul">{{item.carType}}</text>
           <text class="dec">服务车型</text>
