--- a/miniprogram/pages/student/home/index.wxml
+++ b/miniprogram/pages/student/home/index.wxml
@@ -1,6 +1,7 @@
 <scroll-view
     scroll-y
-    class="coach-list"
+    class="scroll-view"
+    type="list"
     bindrefresherrefresh="onPullDownRefresh"
     refresher-enabled="{{true}}"
     refresher-triggered="{{isRefreshing}}"
@@ -46,7 +47,7 @@
   <view class="coach-list">
     <view class="coach-item" wx:for="{{coachList}}" wx:key="id">
       <view class="coach-base">
-        <image src="{{item.avatar}}" class="avatar"></image>
+        <image src="{{item.avatar || images.icons.defaultAvatar}}" class="avatar"></image>
         <view class="coach-info">
           <view class="coach-title">
             <text>{{item.name}}</text>
