--- a/miniprogram/pages/coach/home/index.wxss
+++ b/miniprogram/pages/coach/home/index.wxss
@@ -1,47 +1,19 @@
 page {
   position: relative;
+  width: 750rpx;
+  height: 100vh;
   background-color: #F6F6F6;
 }
-.custom-navigation-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 130rpx; /* 根据实际情况调整高度 */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-}
-
-.navigation-bar-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, #ff7e5f, #feb47b);
-}
-
-.navigation-bar-content {
+.scroll-view {
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
-.navigation-bar-title {
-  color: white;
-  font-size: 32rpx;
-  font-weight: 400;
-  margin-top: 20rpx;
+  top: 0;
+  width: 750rpx;
+  height: 100vh;
 }
 
 .user-top {
   position: relative;
-  top: 130rpx;
+  top: 0rpx;
   width: 690rpx;
   height: 120rpx;
   padding: 0rpx 30rpx 180rpx 30rpx;
@@ -79,8 +51,8 @@ page {
 }
 
 .order-container {
-  position: relative;
-  top: -30rpx;
+  position: absolute;
+  top: 140rpx;
   display: flex;
   justify-content: space-between;
   width: 690rpx;
@@ -89,6 +61,7 @@ page {
 }
 
 .order-container .order-item {
+  position: relative;
   display: flex;
   justify-content: space-between;
   width: 280rpx;
@@ -117,6 +90,7 @@ page {
   opacity: 0.5;
 }
 .tabs {
+  position: relative;
   display: flex;
   align-items: flex-start;
   justify-content: center;
